# AndroidPattern

./: .gitignore  README.md  attempt2.py  attempt3.py  attempt4.py  attempt6.py  attempt7.py
attempt1/: attempt1.py
attempt10/: attempt10.py
attempt10/cpp/: Makefile  attempt10.cpp
attempt10/go/: attempt10.go  go.mod
attempt10/rust/: Cargo.toml  attempt10.rs
attempt11/rust/: Cargo.toml  attempt11.rs  mylib.rs
attempt12/rust/: Cargo.toml  attempt12.rs
attempt2/: attempt2.py
attempt5/: attempt5.py
attempt6/: attempt6.py
attempt7/: .gitignore  Cargo.toml  Makefile  attempt7.rs
attempt7/cpp/: .gitignore  Makefile
attempt7/go/: attempt7.go  attempt7_test.go  go.mod
attempt7/rust/: .gitignore  Cargo.toml
attempt8/: attempt8.py
attempt8/cpp/: .gitignore  Makefile  attempt8.cpp
attempt8/go/: go.mod
attempt8/rust/: Cargo.toml  attempt8.rs
attempt9/: attempt9.py
attempt9/cpp/: .gitignore  Makefile  attempt9.cpp
attempt9/go/: attempt9.go  go.mod
attempt9/rust/: Cargo.toml  attempt9.rs
